# dominic

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
solo_legged_gym/: __init__.py
solo_legged_gym/cluster/: evaluation_cluster.py  grid_evaluation.json  grid_search.json  train_cluster.py
solo_legged_gym/deployment/: play.py  run_robot.bash  solo12_config.yml  tracker.py
solo_legged_gym/envs/: __init__.py
solo_legged_gym/envs/a1_vanilla/: a1_vanilla.py  a1_vanilla_config.py
solo_legged_gym/envs/base/: base_config.py  base_task.py
solo_legged_gym/envs/go1_vanilla/: go1_vanilla.py  go1_vanilla_config.py
solo_legged_gym/envs/solo12_dominic_position/: solo12_dominic_position.json  solo12_dominic_position.py  solo12_dominic_position_config.py
solo_legged_gym/envs/solo12_domino/: solo12_domino.json  solo12_domino.py  solo12_domino_config.py
solo_legged_gym/envs/solo12_domino_position/: solo12_domino_position.json  solo12_domino_position.py  solo12_domino_position_config.py
solo_legged_gym/envs/solo12_phase/: solo12_phase.py  solo12_phase_config.py
solo_legged_gym/envs/solo12_sac/: solo12_sac.json  solo12_sac.py  solo12_sac_config.py
solo_legged_gym/envs/solo12_vanilla/: solo12_vanilla.json  solo12_vanilla.py  solo12_vanilla_config.py
solo_legged_gym/logs/solo12_dominic_position/base_velocity_direction/: events.out.tfevents.1700247400.crl-desktop.246140.0  solo12_dominic_position.json
solo_legged_gym/plot/: experiment_aggregation.py  marin_plot.ipynb  plot_vdw.ipynb  plotting_arxiv.ipynb
solo_legged_gym/plot/.ipynb_checkpoints/: plot_vdw-checkpoint.ipynb
solo_legged_gym/resources/robots/a1/urdf/: a1.urdf
solo_legged_gym/resources/robots/aliengo/urdf/: aliengo.urdf
solo_legged_gym/resources/robots/go1/urdf/: go1.urdf
solo_legged_gym/resources/robots/solo12/urdf/: solo12.urdf
solo_legged_gym/resources/robots/solo8/urdf/: solo8.urdf
solo_legged_gym/runners/: on_policy_runner.py
solo_legged_gym/runners/algorithms/: __init__.py  ppo.py  sac.py
solo_legged_gym/runners/algorithms/dominic/: dominic.py
solo_legged_gym/runners/algorithms/domino/: domino.py  domino_policy.py  rollout_buffer.py
solo_legged_gym/runners/algorithms/ppo/: ppo.py  ppo_policy.py  rollout_buffer.py
solo_legged_gym/runners/algorithms/sac/: sac.py  sac_policy.py
solo_legged_gym/runners/modules/: __init__.py  actor_critic.py  masked_policy.py  masked_successor_feature.py  masked_value.py  normalizer.py  policy.py  qvalue.py  qvalues.py  successor_feature.py  value.py
solo_legged_gym/runners/storage/: __init__.py  replay_buffer.py  rollout_storage.py
solo_legged_gym/runners/utils/: distributions.py  pink_noise.py  utils.py
solo_legged_gym/scripts/: evaluation.py  keyboard_play.py  log_data_plot.py  plot.ipynb  position_play.py  position_play2.py  train.py  train_batch.py
solo_legged_gym/scripts/.ipynb_checkpoints/: plot-checkpoint.ipynb
solo_legged_gym/utils/: __init__.py  helpers.py  logger.py  math.py  task_registry.py  terrain.py  wandb_utils.py
