[tool.poetry]
name = "solo_legged_gym"
version = "1.0.0"
description = "Environment for DOMiNiC"
authors = ["Jin Cheng <jin.cheng@tuebingen.mpg.de>"]
readme = "README.md"
packages = [{include = "solo_legged_gym"}]

[tool.poetry.dependencies]
python = ">=3.8 <3.9"
matplotlib = "*"
numpy = "<1.20"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp38-cp38-linux_x86_64.whl"}
tensorboard = "^2.12.0"
wandb = "*"
pynput = "*"
imageio = "*"
moviepy = "*"
onnx = "*"
notebook = "*"
shapely = "1.7.1"

[tool.black]
line-length = 140
target-version = ["py38"]

[tool.ruff]
ignore = ["C901", "F403", "F405", "E501", "E402"]
select = ["F", "E", "W", "I001"]
line-length = 120
target-version= "py38"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
